--- a/examples/index.html
+++ b/examples/index.html
@@ -53,6 +53,14 @@
     .code>code {
       background: transparent;
     }
+    
+    .text-color{
+      color: black;
+    }
+
+    .text-color:active {
+      color: yellowgreen;
+    }
   </style>
   <div class="jumbotron" style="border-radius: 0">
     <h1 class="display-4" style="font-size: 30px;">
@@ -82,7 +90,9 @@
       <li><a href="multi-rows-carousel/">Multiple rows carousel (Shopee-like)</a></li>
       <li><a href="tour-carousel/">Tour carousel (KLOOK-like)</a></li>
       <li><a href="responsive-carousel/">Responsive carousel (KKday-like)</a></li>
+      <li><a href="select-bar-carousel/">Research bar carousel </a></li>
     </ul>
+
     <h2 class="thin">Features</h2>
     <ul>
       <li>RWD</li>
